--- a/CONFIG/pacman.conf
+++ b/CONFIG/pacman.conf
@@ -16,7 +16,7 @@
 #GPGDir      = /etc/pacman.d/gnupg/
 #HookDir     = /etc/pacman.d/hooks/
 HoldPkg     = pacman glibc
-XferCommand = /usr/bin/curl --connect-timeout 10 --retry 10 --retry-delay 10 -L -C - -f -o %o %u
+#XferCommand = /usr/bin/curl --connect-timeout 10 --retry 10 --retry-delay 10 -L -C - -f -o %o %u
 #XferCommand = /usr/bin/wget --passive-ftp -c -O %o %u
 #CleanMethod = KeepInstalled
 Architecture = auto
